# mlops_final_project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
backend/: Dockerfile  config.py  requirements.txt
backend/services/: embedding.py  rag.py  vector_store.py
frontend/: Dockerfile  app.py
infrastructure/: main.tf
