[project]
name = "final-mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.7",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.16.2",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "uvicorn>=0.40.0",
]
